# hh_information

./: .gitignore  README.md  main.py  pyproject.toml
src/: abstract_classes.py  classes.py  utils.py
tests/: test_hh_vacancy_service.py  test_job_vacancy.py  test_json_vacancy_storage.py
