[tool.poetry]
name = "hh-information"
version = "0.1.0"
description = ""
authors = ["Roman Kudryashov <romkud55@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
union = "^0.1.10"
pandas = "^2.2.1"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
